content/terraform-enterprise/2.0.x/docs/enterprise/api-docs/readiness.mdx
---
page_title: Readiness endpoint
description: Learn how to use the readiness endpoints to check if Terraform Enterprise nodes are ready to accept requests.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-04-08T18:19:45.000Z
last_modified: 2026-04-08T18:19:45.000Z
# END AUTO GENERATED METADATA
---

[200]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/200
[400]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/400
[401]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/401
[503]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/503
[JSON API error object]: https://jsonapi.org/format/#error-objects
[JSON API document]: /terraform/enterprise/api-docs#json-api-documents

# Readiness endpoint

Terraform Enterprise provides two readiness endpoints that check if nodes are ready to accept requests. Both endpoints perform quick health checks of critical subsystems and return the current readiness status.

- `/api/v1/health/readiness`: This endpoint checks readiness of  a single node and is served on the application port. Because this endpoint targets a specific node, you should send the request directly to the node instead of through a load balancer. Refer to [Check single-node readiness](#check-single-node-readiness) for details.
- `/api/v1/nodes/readiness`: This endpoint checks the readiness of all active nodes in the deployment and is served on the admin console port. By default, the admin console port is `8443`. This endpoint requires authentication. Refer to [Check multi-node readiness](#check-multi-node-readiness) for details.

## Check single-node readiness

This endpoint checks the readiness of the individual node that receives the request. Because this endpoint targets a specific node, you should send the request directly to the node instead of through a load balancer.

`GET /api/v1/health/readiness`

### Query parameters

| Parameter | Type | Description |
| --- | --- | --- |
| `timeout` | integer | Optional. Timeout in seconds for the readiness check. Valid range is `1`-`30`. Default is `1`. |

### Sample request

```shell
curl \
  --request GET \
  "https://tfe.example.com/api/v1/health/readiness?timeout=5"
```

## Readiness registry checks

Both readiness endpoints check the following subsystems. For a complete list of Terraform Enterprise services, refer to the [services reference](/terraform/enterprise/deploy/reference/services).

| Subsystem | Description |
| --- | --- |
| Archivist  | Ensures backend storage connectivity |
| Atlas  | Validates Atlas Rails application health endpoint connectivity |
| Vault  | Validates that Vault is initialized, sealed (or unsealed) and active |
| Database  | Fast connectivity test to PostgreSQL (no version/extension validation, no retries) |
| Redis  | Fast connectivity test to Redis (no retry, no validation) |
| Task Worker  | Checks if task worker is in draining state  |
| Disk  |  Verifies disk path exists and is accessible (disk operational mode only) |

## Single-node response

The endpoint returns the readiness status in JSON format by default. For requests with `Accept` header containing `text/plain` or `text/html`, it returns plain text.

### JSON response

| Attribute | Type | Description |
| --- | --- | --- |
| `node` | string | Name of the node that performed the check |
| `status` | string | Overall readiness status: `OK`, `ERROR`, or `DRAINING` |
| `checks` | array of objects | Detailed status for each subsystem check |
| `checks[].check` | string | Name of the subsystem being checked |
| `checks[].status` | string | Status of the check: `OK` or `ERROR` |

### Sample JSON response

```json
{
  "node": "84ebea16aab1",
  "status": "ERROR",
  "checks": [
    {
      "check": "archivist",
      "status": "OK"
    },
    {
      "check": "atlas",
      "status": "ERROR"
    },
    {
      "check": "database",
      "status": "OK"
    },
    {
      "check": "disk",
      "status": "OK"
    },
    {
      "check": "redis",
      "status": "OK"
    },
    {
      "check": "task-worker",
      "status": "ERROR"
    },
    {
      "check": "vault",
      "status": "OK"
    }
  ]
}
```

### Plain text response

Returns the overall status as plain text: `OK`, `ERROR`, or `DRAINING`.

### Single-node response codes

| Status | Response | Reason |
| --- | --- | --- |
| [200][] | [JSON API document][] or plain text | Terraform Enterprise is ready |
| [400][] | [JSON API error object][] error | Invalid timeout parameter |
| [503][] | [JSON API document][] or plain text | Terraform Enterprise is not ready or draining |

## Check multi-node readiness

The multi-node readiness endpoint aggregates readiness check results from all active nodes in a Terraform Enterprise deployment. It returns node-level readiness status in a single authenticated request, so you do not need to query each node individually. Authentication is required to use this endpoint.

This endpoint is useful for monitoring deployment health and for powering the [admin console system health overview](/terraform/enterprise/deploy/configuration/admin-console#view-system-health).

`GET /api/v1/nodes/readiness`

### Query parameters

| Parameter | Type | Description |
| --- | --- | --- |
| `timeout` | integer | Optional. Timeout in seconds for the readiness check. Valid range is `1`-`30`. Default is `5`. |

### Sample request

```shell
curl \
  --header "Authorization: Bearer $TOKEN" \
  --request GET \
  "https://tfe.example.com:8443/api/v1/nodes/readiness?timeout=5"
```

### Sample response

```json
[
  {
    "node": "node-id-1",
    "status": "ERROR",
    "checks": [
      {
        "check": "archivist",
        "status": "ERROR"
      },
      {
        "check": "atlas",
        "status": "ERROR"
      },
      {
        "check": "database",
        "status": "OK"
      },
      {
        "check": "redis",
        "status": "OK"
      },
      {
        "check": "task-worker",
        "status": "OK"
      },
      {
        "check": "vault",
        "status": "OK"
      }
    ]
  },
  {
    "node": "node-id-2",
    "status": "OK",
    "checks": [
      {
        "check": "archivist",
        "status": "OK"
      },
      {
        "check": "atlas",
        "status": "OK"
      },
      {
        "check": "database",
        "status": "OK"
      },
      {
        "check": "redis",
        "status": "OK"
      },
      {
        "check": "task-worker",
        "status": "OK"
      },
      {
        "check": "vault",
        "status": "OK"
      }
    ]
  }
]
```

### Response attributes

The endpoint returns an array of readiness results. Each element represents one active node in the deployment.

| Attribute | Type | Description |
| --- | --- | --- |
| `node` | string | Identifier of the node |
| `status` | string | Overall readiness status for the node: `OK`, `ERROR`, or `DRAINING` |
| `checks` | array of objects | Detailed status for each subsystem check |
| `checks[].check` | string | Name of the subsystem being checked |
| `checks[].status` | string | Status of the check: `OK` or `ERROR` |

The `status` field reflects the highest severity across all subsystem checks for the node. `ERROR` takes precedence over `DRAINING`, which takes precedence over `OK`.

The response includes nodes that fail to execute readiness checks as well as the appropriate error information.

### Response codes

| Status | Response | Reason |
| --- | --- | --- |
| [200][] | [JSON API document][] | Readiness checks completed successfully |
| [400][] | [JSON API error object][] | Invalid request parameters, such as timeout out of range |
| [401][] | [JSON API error object][] | Authentication required |
| [503][] | [JSON API document][] | One or more nodes are not ready |

@include "api-code-blocks/system-api.mdx"